# Proyecto_Angry_Birds

./: CMakeLists.txt  Makefile  README.md  imgui.ini  main.cpp
imgui-1.88/examples/example_sdl_sdlrenderer/: main.cpp
include/: BirdEntity.h  BoxComponent.h  CameraEntity.h  Collision.h  CollisionHandlers.h  Component.h  Entity.h  Game.h  ImguiHeaders.h  InputSystem.h  Mesh.h  MeshComponent.h  MoveComponent.h  PhysWorld.h  PlaneEntity.h  Renderer.h  RigidBody.h  Shader.h  SpriteComponent.h  Texture.h  VertexArray.h
src/: BirdEntity.cpp  BoxComponent.cpp  CameraEntity.cpp  Collision.cpp  Component.cpp  Entity.cpp  Game.cpp  InputSystem.cpp  Math.cpp  Mesh.cpp  MeshComponent.cpp  MoveComponent.cpp  PhysWorld.cpp  PlaneEntity.cpp  Renderer.cpp  RigidBody.cpp  Shader.cpp  SpriteComponent.cpp  Texture.cpp  VertexArray.cpp
